--- a/index.html
+++ b/index.html
@@ -8,22 +8,51 @@
   
   <title>Frontend Mentor | NFT preview card component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="stylesheet" href="./public/css/main.css">
 </head>
 <body>
 
-  Equilibrium #3429
+  <section class="nft_container">
+    <div class="container">
+      <img src="./images/image-equilibrium.jpg" alt="pic" class="nft_image">
 
-  Our Equilibrium collection promotes balance and calm.
+      <h2>
+        Equilibrium #3429
+      </h2>
 
-  0.041 ETH
-  3 days left
-  
-  Creation of Jules Wyvern
+      <p class="content">
+        Our Equilibrium collection promotes balance and calm.
+      </p>
+
+      <div class="ntf_info">
+        <div class="price">
+          <img src="./images/icon-ethereum.svg" alt="" class="price_img">
+
+          <span>
+            0.041 ETH
+          </span>
+        </div>
+
+        <div class="time">
+          <img src="./images/icon-clock.svg" alt="" class="time_img">
+
+          <span>
+            3 days left
+          </span>
+        </div>
+      </div>
+
+      <span class="hr_line"></span>
+
+      <div class="user_info">
+        <img src="./images/image-avatar.png" alt="" class="user_img">
+
+        <p class="user_title">
+          Creation of <span>Jules Wyvern</span> 
+        </p>
+      </div>
+    </div>
+  </section>
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
