--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
   <section class="nft_container">
     <div class="container">
+      <span class="img_overlay"></span>
       <img src="./images/image-equilibrium.jpg" alt="pic" class="nft_image">
 
       <h2>
@@ -56,7 +57,7 @@
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="sajana-wijesinghe.com/">Sajana Wijesinghe</a>.
   </div>
 </body>
 </html>
