--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 
   <section class="nft_container">
     <div class="container">
-      <span class="img_overlay"></span>
+      <span class="img_overlay">
+        <img src="./images/icon-view.svg" alt="" class="img_hover">
+      </span>
       <img src="./images/image-equilibrium.jpg" alt="pic" class="nft_image">
 
       <h2>
